// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csf-story-kind No default export 1`] = `
Object {
  "stories": Object {
    "myStory": Object {
      "arguments": Array [],
      "location": Object {
        "end": Object {
          "column": 37,
          "line": 2,
        },
        "start": Object {
          "column": 29,
          "line": 2,
        },
      },
      "name": "myStory",
      "source": "() => {}",
    },
  },
}
`;

exports[`csf-story-kind default export - no title 1`] = `
Object {
  "properties": Array [
    Object {
      "loc": SourceLocation {
        "end": Position {
          "column": 15,
          "line": 3,
        },
        "start": Position {
          "column": 8,
          "line": 3,
        },
      },
      "name": "test",
      "value": 1,
    },
  ],
  "stories": Object {},
  "title": undefined,
}
`;

exports[`csf-story-kind default export - with title 1`] = `
Object {
  "properties": Array [
    Object {
      "loc": SourceLocation {
        "end": Position {
          "column": 49,
          "line": 3,
        },
        "start": Position {
          "column": 10,
          "line": 3,
        },
      },
      "name": "title",
      "value": "Storybook/Blocks/ControlsTable",
    },
  ],
  "stories": Object {},
  "title": "Storybook/Blocks/ControlsTable",
}
`;

exports[`csf-story-kind default export - with title and controls 1`] = `
Object {
  "properties": Array [
    Object {
      "loc": SourceLocation {
        "end": Position {
          "column": 31,
          "line": 3,
        },
        "start": Position {
          "column": 8,
          "line": 3,
        },
      },
      "name": "title",
      "value": "Storybook/Kind",
    },
    Object {
      "loc": SourceLocation {
        "end": Position {
          "column": 32,
          "line": 4,
        },
        "start": Position {
          "column": 8,
          "line": 4,
        },
      },
      "name": "component",
      "value": "ControlsTable",
    },
    Object {
      "loc": SourceLocation {
        "end": Position {
          "column": 9,
          "line": 14,
        },
        "start": Position {
          "column": 8,
          "line": 5,
        },
      },
      "name": "parameters",
      "value": Array [
        Object {
          "loc": SourceLocation {
            "end": Position {
              "column": 11,
              "line": 13,
            },
            "start": Position {
              "column": 10,
              "line": 6,
            },
          },
          "name": "controls",
          "value": Array [
            Object {
              "loc": SourceLocation {
                "end": Position {
                  "column": 13,
                  "line": 12,
                },
                "start": Position {
                  "column": 12,
                  "line": 7,
                },
              },
              "name": "name",
              "value": Array [
                Object {
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 37,
                      "line": 8,
                    },
                    "start": Position {
                      "column": 14,
                      "line": 8,
                    },
                  },
                  "name": "type",
                  "value": "ControlTypes.TEXT",
                },
                Object {
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 27,
                      "line": 9,
                    },
                    "start": Position {
                      "column": 14,
                      "line": 9,
                    },
                  },
                  "name": "label",
                  "value": "Name",
                },
                Object {
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 27,
                      "line": 10,
                    },
                    "start": Position {
                      "column": 14,
                      "line": 10,
                    },
                  },
                  "name": "value",
                  "value": "Mark",
                },
                Object {
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 25,
                      "line": 11,
                    },
                    "start": Position {
                      "column": 14,
                      "line": 11,
                    },
                  },
                  "name": "order",
                  "value": 9999,
                },
              ],
            },
          ],
        },
      ],
    },
  ],
  "stories": Object {},
  "title": "Storybook/Kind",
}
`;

exports[`csf-story-kind default export - with title and parameters 1`] = `
Object {
  "properties": Array [
    Object {
      "loc": SourceLocation {
        "end": Position {
          "column": 49,
          "line": 3,
        },
        "start": Position {
          "column": 10,
          "line": 3,
        },
      },
      "name": "title",
      "value": "Storybook/Blocks/ControlsTable",
    },
    Object {
      "loc": SourceLocation {
        "end": Position {
          "column": 11,
          "line": 9,
        },
        "start": Position {
          "column": 10,
          "line": 4,
        },
      },
      "name": "parameters",
      "value": Array [
        Object {
          "loc": SourceLocation {
            "end": Position {
              "column": 36,
              "line": 5,
            },
            "start": Position {
              "column": 12,
              "line": 5,
            },
          },
          "name": "component",
          "value": "ControlsTable",
        },
        Object {
          "loc": SourceLocation {
            "end": Position {
              "column": 13,
              "line": 8,
            },
            "start": Position {
              "column": 12,
              "line": 6,
            },
          },
          "name": "addonControls",
          "value": Array [
            Object {
              "loc": SourceLocation {
                "end": Position {
                  "column": 26,
                  "line": 7,
                },
                "start": Position {
                  "column": 14,
                  "line": 7,
                },
              },
              "name": "smart",
              "value": false,
            },
          ],
        },
      ],
    },
  ],
  "stories": Object {},
  "title": "Storybook/Blocks/ControlsTable",
}
`;
